remove and test remove

--- a/.gitignore
+++ b/.gitignore
@@ -879,3 +879,7 @@ Data Structures in Java/bin/TestArrayQueue.class
 .gitignore
 .gitignore
 Data Structures in Java/bin/TestLLQueue.class
+Data Structures in Java/bin/IntBST.class
+Data Structures in Java/bin/TestIntBST.class
+Data Structures in Java/bin/IntBSTNode.class
+.gitignore
